--- a/src/client/styles/components/_containter.scss
+++ b/src/client/styles/components/_containter.scss
@@ -3,5 +3,5 @@
     padding-top: 1.25rem;
     text-align: center;
     background: rgb(46, 46, 53);
-    height: 100rem;
+    // height: 100rem;
 }
