--- a/src/client/styles/components/_critic-container.scss
+++ b/src/client/styles/components/_critic-container.scss
@@ -1,6 +1,6 @@
 .critic-list {
     background: $cum-white;
-    height: 50rem;
+    // height: 50rem;
     border: .0625rem black solid;
     border-top: none;
     border-radius: 0 0 1rem 1rem;
