--- a/src/client/styles/components/_trophy-case.scss
+++ b/src/client/styles/components/_trophy-case.scss
@@ -7,3 +7,12 @@
     background: rgba(147, 152, 153, 0.541);
     margin: 5% auto 0 auto;
 }
+
+@media (min-width: 40rem) {
+
+}
+
+@media (min-width: 770px) {
+    
+    
+}
