--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -7,3 +7,4 @@
 @import './components/header';
 @import './components/player-list';
 @import './components/trophy-case';
+@import './components/player-list-cat';
