--- a/src/client/styles/components/_containter.scss
+++ b/src/client/styles/components/_containter.scss
@@ -5,3 +5,15 @@
     background: rgb(46, 46, 53);
     // height: 100rem;
 }
+
+@media (min-width: 40rem) {
+    
+    .container {
+        padding-top: 1.25rem;
+    }
+}
+
+@media (min-width: 770px) {
+    
+    
+}
