--- a/src/client/styles/components/_critic-container.scss
+++ b/src/client/styles/components/_critic-container.scss
@@ -5,3 +5,19 @@
     border-top: none;
     border-radius: 0 0 1rem 1rem;
 }
+
+@media (min-width: 40rem) {
+
+    // .critic-list {
+    //     max-width: 1000px;
+    //     width: 100%;
+    // }
+}
+
+@media (min-width: 770px) {
+    
+    // .critic-list {
+    //     width: 80%;
+    // }
+    
+}
