--- a/src/client/styles/components/_critic-profile.scss
+++ b/src/client/styles/components/_critic-profile.scss
@@ -11,7 +11,6 @@
     display: inline-block;
     border-radius: 15px;
     font-size: 1rem;
-    font-family: 'Titan One', cursive;
 }
 
 .critic-name {
@@ -31,7 +30,6 @@
     padding-left: 20%;
     font-weight: bold;
     font-size: 1rem;
-    font-family: 'Crimson Text', serif;
 }
 
 .critic-foot {
@@ -47,4 +45,18 @@
     font-size: 11px;
     text-decoration: none;
     padding: 0.125rem 0.125rem;
+}
+
+@media (min-width: 40rem) {
+    
+    .critic-profile {
+        max-width: 21rem;
+        margin: 0.5rem 0.2rem;
+        vertical-align: top;
+    }
+}
+
+@media (min-width: 770px) {
+    
+    
 }
