--- a/src/client/styles/components/_player-list.scss
+++ b/src/client/styles/components/_player-list.scss
@@ -68,3 +68,15 @@
     width: 100%;
     border: .0625rem black solid;
 }
+
+@media (min-width: 40rem) {
+    
+    .cats-banner {
+        height: 30px;
+    }
+}
+
+@media (min-width: 770px) {
+    
+    
+}
