--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -8,3 +8,4 @@
 @import './components/player-list';
 @import './components/trophy-case';
 @import './components/player-list-cat';
+@import './components/user-profile'
