--- a/public/style.css
+++ b/public/style.css
@@ -407,14 +407,15 @@ template {
   margin: 0.6rem 0; }
 
 .logo {
-  display: none;
   order: 2; }
 
 .brand {
+  display: none;
   color: black;
   text-decoration: none;
   font-weight: bold;
-  font-size: 40px; }
+  font-size: 40px;
+  margin-top: 10px; }
 
 .logo, .logo a, .goat {
   align-items: center; }
@@ -424,16 +425,17 @@ template {
   background: url("/images/Black_Goat.png");
   width: 3.125rem;
   height: 3.123rem;
-  background-size: contain;
-  justify-self: flex-start;
-  order: 3; }
+  background-size: contain; }
 
 .main {
   display: none; }
 
 .main-item {
   display: none;
-  /* margin: 0 0.375rem; */ }
+  margin-top: 5px; }
+
+.auth {
+  display: none; }
 
 .main-item a, .dropbtn {
   color: black;
@@ -454,27 +456,35 @@ li.dropdown {
   .toggle-button {
     display: none; }
   .goat {
-    margin: 0 0 0 1.25rem;
-    justify-self: flex-start;
-    order: 2;
-    padding: 0; }
-  .header {
-    justify-content: flex-start; }
-  .logo {
+    order: 1;
     display: inline;
-    order: 3; }
+    margin: 0 0 0 1.25rem;
+    padding: 0; }
+  .logo {
+    display: flex;
+    justify-self: flex-start; }
+  .brand {
+    display: inline;
+    order: 2; }
   .main-item {
     display: inline-block;
     padding-right: 3%; }
   .main {
-    display: inline;
+    display: inline-block;
     text-align: right;
     width: 70%;
     vertical-align: middle;
-    order: 4; }
+    order: 3; }
   .main-items {
     list-style: none;
-    text-align: right; } }
+    text-align: right; }
+  .auth {
+    order: 4;
+    margin-left: 40px;
+    vertical-align: middle;
+    font-size: 20px;
+    margin-top: 17px;
+    font-weight: bold; } }
 
 .list {
   display: grid;
@@ -564,6 +574,9 @@ li.dropdown {
     margin: 0 3.5%; }
   .player-list {
     font-size: 20px; } }
+
+.user {
+  color: white; }
 
 
 /*# sourceMappingURL=bundle.js.map*/
