--- a/src/client/styles/components/_header.scss
+++ b/src/client/styles/components/_header.scss
@@ -120,6 +120,7 @@ li.dropdown {
     .main-item {
         display: inline-block;
         padding-right: 3%;
+        
     }
 
     .main {
@@ -139,9 +140,15 @@ li.dropdown {
     .auth {        
         order: 4;
         margin-left: 40px;
-        vertical-align: middle;
+        list-style: none;
+        display: flex;
+        align-items: center;
+        min-width: 150px;
+        justify-content: right;
+    }
+
+    .auth a {
         font-size: 20px;
-        margin-top: 17px;
         font-weight: bold;
     }
 }
