--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -8,4 +8,5 @@
 @import './components/player-list';
 @import './components/trophy-case';
 @import './components/player-list-cat';
-@import './components/user-profile'
+@import './components/user-profile';
+@import './components/not-found';
