--- a/src/client/styles/base/_base.scss
+++ b/src/client/styles/base/_base.scss
@@ -1,4 +1,11 @@
+html {
+    height: 100%;
+}
 
+body {
+    min-height: 100%;
+    background: rgb(46, 46, 53);
+}
 .content {
     max-width: 62.5rem;
     margin: auto;
