--- a/src/client/styles/components/_header.scss
+++ b/src/client/styles/components/_header.scss
@@ -37,7 +37,7 @@
 }
 
 .logo {
-    
+    text-decoration: none;
     order: 2;
   
 }
@@ -57,7 +57,6 @@
 
 .goat {
     margin-right: 1.25rem;
-    background: url("/images/Black_Goat.png");
     width: 3.125rem;
     height: 3.123rem;
     background-size: contain;
