--- a/src/client/styles/components/profilePage/_sportsList.scss
+++ b/src/client/styles/components/profilePage/_sportsList.scss
@@ -4,7 +4,19 @@
 }
 
 .list-container {
+    display: flex;
+    flex-direction: column;
     width: 20%;
     font-size: 16px;
     margin: auto;
+    justify-content: center;
+    min-width: 260px;
+}
+
+.list-container button {
+    margin: 10px 0;
+    padding: 5px 0;
+    width: 30%;
+    align-self: center;
+    border-radius: 10px;
 }
