--- a/src/client/styles/components/profilePage/_sportsList.scss
+++ b/src/client/styles/components/profilePage/_sportsList.scss
@@ -40,11 +40,23 @@
     text-align: left;
 }
 
+.player-container {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+
+.delete-player {
+    background: black;
+    color: gold;
+    border-radius: 5px;
+}
+
 .bottom-list {
     order: 3;
 }
 
-.list-container button {
+.bottom-list button {
     margin: 10px 0;
     padding: 5px 0;
     width: 30%;
