Added a spell and repeat error check

--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -12,3 +12,4 @@
 
 @import './components/profilePage/user-profile';
 @import './components/profilePage/sportsList';
+@import './components/profilePage/sportListInput'
