Added ListHeader component so users can navigate between users, critics and players on CriticPage

--- a/src/client/styles/base/_header.scss
+++ b/src/client/styles/base/_header.scss
@@ -147,7 +147,7 @@ li.dropdown {
     }
 
     .auth a {
-        font-size: 20px;
+        font-size: $title-font;
         font-weight: bold;
     }
 }
