--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -9,6 +9,7 @@
 @import './components/criticPage/player-list';
 @import './components/criticPage/trophy-case';
 @import './components/criticPage/player-list-cat';
+@import './components/criticPage/list-header';
 
 @import './components/profilePage/user-profile';
 @import './components/profilePage/sportsList';
