--- a/src/client/styles/components/criticPage/_critic-profile.scss
+++ b/src/client/styles/components/criticPage/_critic-profile.scss
@@ -10,14 +10,14 @@
     min-width: 15.7rem;
     display: inline-block;
     border-radius: 15px;
-    font-size: 1rem;
+    font-size: $title-font;
 }
 
 .critic-name {
     margin: 0 0 0.3rem 0;
     color: gold;
     text-decoration: underline;
-    font-size: 1.5rem;
+    font-size: $title-font;
 }
 
 .critic-info {
@@ -29,7 +29,7 @@
 .critic-stats {
     padding-left: 20%;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: $stat-font;
 }
 
 .critic-foot {
