--- a/src/client/styles/components/criticPage/_player-list-cat.scss
+++ b/src/client/styles/components/criticPage/_player-list-cat.scss
@@ -8,7 +8,7 @@
     position: sticky;
     top: 0;
     padding: 5px 0 15px 0;
-    font-size: 0.9rem;
+    font-size: $title-font;
     /* font-weight: bold; */
     text-align: center;
     
@@ -25,12 +25,12 @@
         margin: 0 2%;
     }
 
-    .catshead {
-        font-size: 1.2rem;
-    }
+    // .catshead {
+    //     font-size: 1.2rem;
+    // }
     
     .player-list {
-        font-size: 18px;
+        font-size: $stat-font;
     }
 }
 
@@ -38,9 +38,5 @@
 
     .cats {
         margin: 0 3.5%;
-    }
-
-    .player-list {
-        font-size: 20px;
     }
 }
