--- a/src/client/styles/components/criticPage/_player-list.scss
+++ b/src/client/styles/components/criticPage/_player-list.scss
@@ -13,7 +13,7 @@
     // font-family: Vidaloka, serif;
     background: rgba(202, 138, 0, 0.9);
     font-weight: bold;
-    font-size: 1.8rem;
+    font-size: $header-font;
     margin: auto;
     margin-top: 2rem;
     width: 100%;
@@ -53,7 +53,7 @@
     overflow: auto;
     height: 20.7rem;
     background: $cum-white;
-    font-size: 0.8rem;
+    font-size: $stat-font;
     border-left: .0625rem black solid;
     border-right: .0625rem black solid;
 }
@@ -62,7 +62,7 @@
     grid-area: foot;
     font-weight: lighter;
     border-radius: 0 0 1rem 1rem;
-    font-size: 1.2rem;
+    font-size: $title-font;
     background: rgba(202, 138, 0, 0.9);
     margin: auto;
     width: 100%;
