--- a/src/client/styles/components/criticPage/_list-header.scss
+++ b/src/client/styles/components/criticPage/_list-header.scss
@@ -1,11 +1,13 @@
 
 .list-header {
     display: flex;
+    border-bottom: 2px solid white;
+    border-left: 2px solid white;
+    margin-top: 4rem;
 }
 .list-header-title {
     color: white;
     font-size: $title-font;
-    margin-top: 4rem;
     width: 12%;
     padding: 0.5rem;
     text-align: center;
@@ -13,9 +15,11 @@
     border-bottom: 2px solid rgb(46, 46, 53);
     border-right: 2px solid white;
     border-left: 2px solid rgb(46, 46, 53);
+    text-decoration: none;
 }
 
 .list-header-title:hover {
     cursor: pointer;
+    background: black;
     color: gold;
 }
