--- a/src/client/styles/base/_header.scss
+++ b/src/client/styles/base/_header.scss
@@ -6,7 +6,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    border-bottom: solid gold 3px;
+    // border-bottom: solid gold 3px;
     position: fixed;
     z-index: 10;
     background: white;
@@ -69,21 +69,26 @@
 
 .main-item {
     font-size: $stat-font;
+    
+}
+
+.main-item a {
+    padding: .3rem .3rem 0.9rem .3rem;
 }
 
 .auth { 
     display: none;
 }
 
-.main-item a, 
+
 .dropbtn {
     color: black;
     text-decoration: none;
-    padding: .3rem .3rem;
 }
 
 .main-item a:hover,
-.main-item a:active {
+.main-item a:active,
+.active {
     color: gold;
     background: rgb(0, 0, 0);
     /* border-radius: 10%; */
@@ -142,18 +147,25 @@ li.dropdown {
     .auth {  
         display: flex;      
         order: 4;
-        margin: auto 0;
+        margin: auto 0 0.4rem 0;
         padding-right: 3%;
         list-style: none;
         align-items: center;
         min-width: 150px;
         justify-content: right;
+        height: 35px;
+    }
+
+    .auth img {
+        width: 35px;
     }
 
 
     .auth a {
+        color: black;
         font-size: $title-font;
         font-weight: bold;
+        text-decoration: none;
     }
 }
 
