--- a/src/client/styles/base/_header.scss
+++ b/src/client/styles/base/_header.scss
@@ -87,7 +87,7 @@
 }
 
 .main-item a:hover,
-.main-item a:active,
+.log-padding a:hover,
 .active {
     color: gold;
     background: rgb(0, 0, 0);
@@ -147,7 +147,7 @@ li.dropdown {
     .auth {  
         display: flex;      
         order: 4;
-        margin: auto 0 0.4rem 0;
+        margin: auto 0;
         padding-right: 3%;
         list-style: none;
         align-items: center;
@@ -156,16 +156,23 @@ li.dropdown {
         height: 35px;
     }
 
-    .auth img {
-        width: 35px;
-    }
-
-
-    .auth a {
+    .log-padding a {
+        padding: .3rem .3rem 0.8rem .3rem;
         color: black;
         font-size: $title-font;
         font-weight: bold;
         text-decoration: none;
+    }
+    
+
+    .auth img:hover {
+        border: 2px solid black;
+    }
+
+    .auth img {
+        width: 35px;
+        border: 2px solid white;
+        padding: 0;
     }
 }
 
