Added tab, uparrow, and downarrow functionaliy in SportList

--- a/src/client/styles/components/profilePage/_sportListInput.scss
+++ b/src/client/styles/components/profilePage/_sportListInput.scss
@@ -10,7 +10,9 @@
     border-radius: 10px;
 }
 
-.bottom-list li:hover {
+.bottom-list li:hover,
+.bottom-list li:focus,
+.active {
     color: gold;
     background: rgb(83, 81, 81);
     border-radius: 5px;
