Trying to deploy to Heorku

--- a/src/client/styles/components/profilePage/_sportListInput.scss
+++ b/src/client/styles/components/profilePage/_sportListInput.scss
@@ -12,7 +12,7 @@
 
 .bottom-list li:hover,
 .bottom-list li:focus,
-.active {
+.tab {
     color: gold;
     background: rgb(83, 81, 81);
     border-radius: 5px;
