--- a/src/client/styles/base/_header.scss
+++ b/src/client/styles/base/_header.scss
@@ -13,9 +13,20 @@
     top: 0;
 }
 
+.backdrop {
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: 100;
+    width: 100vw;
+    height: 100vh;
+    /* vmin and vmax are based off the heights and widths of the viewport */
+    background: rgba(0, 0, 0, 0.5);
+}
+
 .toggle-button {
     margin-left: 1.25rem;
-    width: 3rem;
+    width: 3.5rem;
     background: transparent;
     border: none;
     cursor: pointer;
@@ -30,17 +41,51 @@
 
 .toggle-button__bar {
     width: 100%;
-    height: 0.2rem;
+    height: 0.1rem;
     background: black;
     display: block;
     margin: 0.6rem 0;
 }
 
-.logo {
-    text-decoration: none;
-    order: 2;
+.mobile-nav {
+    position: fixed;
+    z-index: 101;
+    top: 0;
+    left: 0;
+    background: rgb(0, 0, 0);
+    width: 25%;
+    height: 100vh;
+  }
   
+  .mobile-nav__items {
+    width: 90%;
+    height: 100%;
+    list-style: none;
+    margin: 10% auto;
+    padding: 0;
+    text-align: center;
+  }
+  
+  .mobile-nav__item {
+    margin: 1rem 0;
+    
+  }
+  
+  .mobile-nav__item a {
+    font-size: 1.5rem;
+    color: white;
+    text-decoration: none;
+    padding: .1875rem .1875rem;
 }
+
+.mobile-nav__item a:hover,
+.mobile-nav__item a:active {
+    color: rgb(255, 255, 255);
+    background:gold;
+    border-radius: 10%;
+    cursor: pointer;
+}
+
 
 .brand {
     display: none;
@@ -51,7 +96,13 @@
     margin: auto 0;
 }
 
-.logo, .logo a, .goat {
+.logo {
+    display: none;
+}
+
+.logo,
+.logo a,
+.goat {
     align-items: center;
 }
 
@@ -69,15 +120,43 @@
 
 .main-item {
     font-size: $stat-font;
-    
+
 }
 
 .main-item a {
     padding: .3rem .3rem 0.9rem .3rem;
 }
 
-.auth { 
-    display: none;
+.auth {
+
+    display: flex;
+    order: 2;
+    margin: auto 0;
+    padding-right: 3%;
+    list-style: none;
+    align-items: center;
+    min-width: 150px;
+    justify-content: right;
+    height: 35px;
+
+}
+
+.auth img:hover {
+    border: 2px solid black;
+}
+
+.auth img {
+    width: 35px;
+    border: 2px solid white;
+    padding: 0;
+}
+
+.log-padding a {
+    padding: .3rem .3rem 0.8rem .3rem;
+    color: black;
+    font-size: $title-font;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 
@@ -103,15 +182,17 @@ li.dropdown {
     .toggle-button {
         display: none;
     }
+
     .goat {
         order: 1;
         display: inline;
         margin: 0 0 0 1.25rem;
         padding: 0;
     }
-   
+
     .logo {
         display: flex;
+        text-decoration: none;
         justify-self: flex-start;
     }
 
@@ -120,11 +201,10 @@ li.dropdown {
         order: 2;
     }
 
-    .main-item
-     {
+    .main-item {
         order: 1;
         padding: 0 3%;
-        
+
     }
 
     .main {
@@ -141,42 +221,20 @@ li.dropdown {
         margin: 0;
         list-style: none;
         text-align: left;
-        
+
     }
 
-    .auth {  
-        display: flex;      
+    .auth {
         order: 4;
-        margin: auto 0;
-        padding-right: 3%;
-        list-style: none;
-        align-items: center;
-        min-width: 150px;
-        justify-content: right;
-        height: 35px;
     }
 
-    .log-padding a {
-        padding: .3rem .3rem 0.8rem .3rem;
-        color: black;
-        font-size: $title-font;
-        font-weight: bold;
-        text-decoration: none;
-    }
-    
+    .mobile-nav {
+       display: none;
+      }
 
-    .auth img:hover {
-        border: 2px solid black;
-    }
-
-    .auth img {
-        width: 35px;
-        border: 2px solid white;
-        padding: 0;
+      .backdrop {
+        display: none;
     }
 }
 
-@media (min-width: 770px) {
-    
-    
-}
+@media (min-width: 770px) {}
