--- a/src/client/styles/components/profilePage/_sportsList.scss
+++ b/src/client/styles/components/profilePage/_sportsList.scss
@@ -2,6 +2,8 @@
     display: flex;
     margin-top: 40px;
     justify-content: flex-start;
+    flex-wrap: wrap;
+
 }
 
 .list-container {
@@ -10,8 +12,8 @@
     width: 20%;
     font-size: 1rem;
     justify-content: space-between;
-    margin: 80px auto;
-    min-width: 15.7rem;
+    margin: 50px auto;
+    min-width: 16.5rem;
     height: 50%;
     // min-height: 300px;
     color: black;
