--- a/src/client/styles/base/_containter.scss
+++ b/src/client/styles/base/_containter.scss
@@ -2,6 +2,7 @@
     margin-top: 3.06rem;
     padding-top: 1.25rem;
     text-align: center;
+    font-size: 12px;
 }
 
 @media (min-width: 40rem) {
