--- a/src/client/styles/base/_header.scss
+++ b/src/client/styles/base/_header.scss
@@ -11,6 +11,7 @@
     z-index: 10;
     background: white;
     top: 0;
+    font-size: 14px;
 }
 
 .backdrop {
@@ -55,36 +56,42 @@
     background: rgb(0, 0, 0);
     width: 25%;
     height: 100vh;
-  }
-  
-  .mobile-nav__items {
+}
+
+.mobile-nav__items {
     width: 90%;
     height: 100%;
     list-style: none;
     margin: 10% auto;
     padding: 0;
     text-align: center;
-  }
-  
-  .mobile-nav__item {
+}
+
+.mobile-nav__items li {
+    margin: 20px 0;
+}
+
+.mobile-nav__item {
     margin: 1rem 0;
-    
-  }
-  
-  .mobile-nav__item a {
-    font-size: 1.5rem;
+
+}
+
+.mobile-nav__item-link {
+    font-size: 1rem;
     color: white;
     text-decoration: none;
     padding: .1875rem .1875rem;
 }
 
-.mobile-nav__item a:hover,
-.mobile-nav__item a:active {
-    color: rgb(255, 255, 255);
-    background:gold;
+.mobile-nav__item-link:hover,
+.mobile-nav__item-link:active,
+.active-mobile {
+    color: black;
+    background: gold;
     border-radius: 10%;
     cursor: pointer;
 }
+
 
 
 .brand {
@@ -92,7 +99,6 @@
     color: black;
     text-decoration: none;
     font-weight: bold;
-    font-size: $header-font;
     margin: auto 0;
 }
 
@@ -113,14 +119,34 @@
     background-size: contain;
 }
 
+.goat-mobile {
+    margin-bottom: 10px;
+    padding: 10px 20%;
+    border-bottom: 2px solid gold;
+    width: 2.7rem;
+    height: 2.7rem;
+    background-size: contain;
+}
+
 .main {
     display: none;
 }
 
+.main-items {
+    display: flex;
+    align-items: center;
+    margin: 0;
+    list-style: none;
+    text-align: left;
 
-.main-item {
-    font-size: $stat-font;
+}
 
+.main-list-header {
+    display: flex;
+    text-align: right;
+    width: 70%;
+    vertical-align: middle;
+    order: 3;
 }
 
 .main-item a {
@@ -154,7 +180,6 @@
 .log-padding a {
     padding: .3rem .3rem 0.8rem .3rem;
     color: black;
-    font-size: $title-font;
     font-weight: bold;
     text-decoration: none;
 }
@@ -199,12 +224,14 @@ li.dropdown {
     .brand {
         display: inline;
         order: 2;
+        font-size: $header-font;
+
     }
 
     .main-item {
         order: 1;
         padding: 0 3%;
-
+        font-size: $stat-font;
     }
 
     .main {
@@ -215,24 +242,21 @@ li.dropdown {
         order: 3;
     }
 
-    .main-items {
-        display: flex;
-        align-items: center;
-        margin: 0;
-        list-style: none;
-        text-align: left;
-
+    .log-padding a {
+        font-size: $title-font;
     }
+
+    
 
     .auth {
         order: 4;
     }
 
     .mobile-nav {
-       display: none;
-      }
+        display: none;
+    }
 
-      .backdrop {
+    .backdrop {
         display: none;
     }
 }
