--- a/src/client/styles/components/criticPage/_player-list-cat.scss
+++ b/src/client/styles/components/criticPage/_player-list-cat.scss
@@ -8,7 +8,7 @@
     position: sticky;
     top: 0;
     padding: 5px 0 15px 0;
-    font-size: $title-font;
+    
     /* font-weight: bold; */
     text-align: center;
     
@@ -25,9 +25,9 @@
         margin: 0 2%;
     }
 
-    // .catshead {
-    //     font-size: 1.2rem;
-    // }
+    .catshead {
+        font-size: $title-font;
+    }
     
     .player-list {
         font-size: $stat-font;
