--- a/src/client/styles/components/profilePage/_sportsList.scss
+++ b/src/client/styles/components/profilePage/_sportsList.scss
@@ -10,7 +10,6 @@
     display: flex;
     flex-direction: column;
     width: 20%;
-    font-size: 1rem;
     justify-content: space-between;
     margin: 50px auto;
     min-width: 16.5rem;
@@ -31,7 +30,6 @@
     margin: 0 0 0.3rem 0;
     color: gold;
     text-decoration: underline;
-    font-size: 1.5rem;
 }
 
 
@@ -67,4 +65,22 @@
     background: rgb(173, 170, 170);
     color: black;
 }
+
+@media (min-width: 40rem) {
+    .list-container {
+        font-size: 1rem;
+        
+    }
+
+    .title-list {
+        font-size: 1.5rem;
+    }
+}
+
+@media (min-width: 770px) {
+    
+    
+}
+
+
 
