--- a/src/client/styles/components/criticPage/_critic-profile.scss
+++ b/src/client/styles/components/criticPage/_critic-profile.scss
@@ -22,12 +22,13 @@
     height: 35px;
     border: 2px solid white;
     padding: 0;
+    margin-right: 1rem;
 }
 
 
 .critic-name {
     order: 2;
-    margin: 0 0 0.3rem 1rem;
+    margin: 0 0 0.3rem 0;
     color: gold;
     text-decoration: underline;
 }
