--- a/public/style.css
+++ b/public/style.css
@@ -459,7 +459,7 @@ body {
   display: flex;
   order: 2;
   margin: auto 0;
-  padding-right: 3%;
+  padding-right: 10px;
   list-style: none;
   align-items: center;
   min-width: 150px;
@@ -739,8 +739,7 @@ li.dropdown {
   width: 20%;
   justify-content: space-between;
   margin: 50px auto;
-  min-width: 16.5rem;
-  height: 50%;
+  min-width: 14rem;
   color: black;
   background: black;
   color: #d8c9c9;
@@ -750,6 +749,7 @@ li.dropdown {
 .title-list {
   order: 1;
   text-align: left;
+  font-size: 1.5rem;
   margin: 0 0 0.3rem 0;
   color: gold;
   text-decoration: underline; }
@@ -772,7 +772,7 @@ li.dropdown {
   height: 23px; }
 
 .player-user-list {
-  padding: 10px 5px 5px 5px;
+  padding: 5px 2px 2px 2px;
   border-radius: 5px; }
 
 .delete-player:hover,
@@ -784,8 +784,11 @@ li.dropdown {
 @media (min-width: 40rem) {
   .list-container {
     font-size: 1rem; }
-  .title-list {
-    font-size: 1.5rem; } }
+  .player-user-list {
+    padding: 10px 5px 5px 5px;
+    border-radius: 5px; }
+  .list-container {
+    min-width: 16rem; } }
 
 .bottom-list {
   order: 3; }
