--- a/src/client/styles/base/_header.scss
+++ b/src/client/styles/base/_header.scss
@@ -158,7 +158,7 @@
     display: flex;
     order: 2;
     margin: auto 0;
-    padding-right: 3%;
+    padding-right: 10px;
     list-style: none;
     align-items: center;
     min-width: 150px;
