--- a/src/client/styles/components/profilePage/_sportsList.scss
+++ b/src/client/styles/components/profilePage/_sportsList.scss
@@ -12,8 +12,8 @@
     width: 20%;
     justify-content: space-between;
     margin: 50px auto;
-    min-width: 16.5rem;
-    height: 50%;
+    min-width: 14rem;
+    // height: 50%;
     // min-height: 300px;
     color: black;
     background: black;
@@ -26,7 +26,7 @@
 .title-list {
     order: 1;
     text-align: left;
-
+    font-size: 1.5rem;
     margin: 0 0 0.3rem 0;
     color: gold;
     text-decoration: underline;
@@ -55,7 +55,7 @@
 }
 
 .player-user-list {
-    padding: 10px 5px 5px 5px;
+    padding: 5px 2px 2px 2px;
     border-radius: 5px;
 }
 
@@ -72,8 +72,13 @@
         
     }
 
-    .title-list {
-        font-size: 1.5rem;
+    .player-user-list {
+        padding: 10px 5px 5px 5px;
+        border-radius: 5px;
+    }
+
+    .list-container {
+        min-width: 16rem;  
     }
 }
 
