--- a/public/style.css
+++ b/public/style.css
@@ -74,7 +74,8 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */ }
 
 /**
@@ -625,6 +626,7 @@ li.dropdown {
 
 .cats-banner {
   grid-area: statsHead;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   height: 25px;
@@ -675,6 +677,7 @@ li.dropdown {
   margin: 0 1%; }
 
 .catshead {
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   padding: 5px 0 15px 0;
