--- a/public/style.css
+++ b/public/style.css
@@ -351,6 +351,7 @@ body {
   background: rgba(0, 0, 0, 0.5); }
 
 .toggle-button {
+  order: 1;
   margin-left: 1.25rem;
   width: 3.5rem;
   background: transparent;
@@ -450,8 +451,7 @@ body {
   display: flex;
   text-align: right;
   width: 70%;
-  vertical-align: middle;
-  order: 3; }
+  vertical-align: middle; }
 
 .main-item a {
   padding: .3rem .3rem 0.9rem .3rem; }
