--- a/public/style.css
+++ b/public/style.css
@@ -464,7 +464,7 @@ body {
   list-style: none;
   align-items: center;
   min-width: 150px;
-  justify-content: right;
+  justify-content: flex-end;
   height: 35px; }
 
 .auth img:hover {
