--- a/src/client/styles/base/_header.scss
+++ b/src/client/styles/base/_header.scss
@@ -162,7 +162,7 @@
     list-style: none;
     align-items: center;
     min-width: 150px;
-    justify-content: right;
+    justify-content: flex-end;
     height: 35px;
 
 }
