--- a/src/client/styles/components/criticPage/_trophy-case.scss
+++ b/src/client/styles/components/criticPage/_trophy-case.scss
@@ -8,6 +8,14 @@
     margin: 5% auto 0 auto;
 }
 
+.player-headshot {
+    background-repeat: no-repeat;
+    width: 5rem;
+    height: 5rem;
+    background-size: contain;
+}
+
+
 @media (min-width: 40rem) {
 
 }
