--- a/src/client/styles/base/_header.scss
+++ b/src/client/styles/base/_header.scss
@@ -114,6 +114,7 @@
 }
 
 .goat {
+    background-image: url('./images/goat.png');
     margin-right: 1.2rem;
     width: 2.7rem;
     height: 2.7rem;
@@ -121,9 +122,10 @@
 }
 
 .goat-mobile {
-    margin-bottom: 10px;
-    padding: 10px 20%;
-    border-bottom: 2px solid gold;
+    background-image: url('./images/goat.png');
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    padding: 10px;
     width: 2.7rem;
     height: 2.7rem;
     background-size: contain;
